syntax = "proto3";

package kv;

option go_package = "github.com/aarush/raft-kv/pkg/transport/proto";

// KV service - client-facing API for the distributed key-value store

service KVService {
    // Get retrieves the value for a key
    rpc Get(GetRequest) returns (GetResponse);

    // Put stores a key-value pair
    rpc Put(PutRequest) returns (PutResponse);

    // Delete removes a key
    rpc Delete(DeleteRequest) returns (DeleteResponse);
}

// Get operation
message GetRequest {
    string key = 1;

    // If true, allows reading from followers (potentially stale)
    // If false (default), ensures linearizable read from leader
    bool allow_stale = 2;
}

message GetResponse {
    string value = 1;
    bool found = 2;

    // If this node is not the leader, redirect info is provided
    string leader_address = 3;
    bool is_leader = 4;

    Error error = 5;
}

// Put operation
message PutRequest {
    string key = 1;
    string value = 2;
}

message PutResponse {
    bool success = 1;

    // If this node is not the leader, redirect info is provided
    string leader_address = 2;
    bool is_leader = 3;

    Error error = 4;
}

// Delete operation
message DeleteRequest {
    string key = 1;
}

message DeleteResponse {
    bool success = 1;
    bool existed = 2;  // True if key existed before deletion

    // If this node is not the leader, redirect info is provided
    string leader_address = 3;
    bool is_leader = 4;

    Error error = 5;
}

// Error types
message Error {
    ErrorCode code = 1;
    string message = 2;
}

enum ErrorCode {
    ERROR_CODE_UNSPECIFIED = 0;
    ERROR_CODE_NOT_LEADER = 1;
    ERROR_CODE_TIMEOUT = 2;
    ERROR_CODE_KEY_NOT_FOUND = 3;
    ERROR_CODE_INTERNAL = 4;
}
